css/emmanuel.css
/* Colours */
a:hover, footer h1 {
    color: #47c0b5; /* Emmanuel cyan against black background */
}
h1.calendar, .calendar-date, .post-image {
    color: #008080; /* Emmanuel cyan against white background */
}
header, footer, body {
    background-color: #333;
}
header, footer {
    color: #eaeaea;
}
.main {
    background-color: #eaeaea;
}
.box-shadow {
    background-color: #ffffff;
}
footer li {
    border-color: #777777;
    border-style: solid;
}

/* Columns */
#main-column {
    float: left;
    width: 65.3333333333%;
}
.main-column-full {
    float: left;
    width: 100%;
}
.main-column-half {
    float: left;
    width: 46.9387755%;
    margin-left: 6.122449%;
}
.main-column-half:first-child {
    margin-left: 0px;
}
#banner-column {
    float: right;
    width: 30.6666666667%;
}
#banner-column:after {
    content: "";
    display: table;
    clear: right;
}
#calendar-column {
    float: right;
    width: 30.6666666667%;
}
@media (max-width: 640px) {
    #main-column {
        width: 100%;
    }
    .main-column-half {
        width: 48%;
        margin-left: 4%;
    }
    #banner-column {
        float: left;
        width: 100%;
    }
    #calendar-column {
        float: left;
        width: 100%;
    }
}
.footer-column-half {
    float: left;
    width: 48%;
    margin-left: 4%;
}
.footer-column-half:first-child {
    margin-left: 0px;
}
.footer-column-quarter {
    float: left;
    width: 45.833333333%;
    margin-left: 8.333333333%;
}
.footer-column-quarter:first-child {
    margin-left: 0px;
}
@media (max-width: 800px) {
    .footer-column-half {
        width: 100%;
        margin-left: 0px;
    }
    .footer-column-quarter {
        width: 48%;
        margin-left: 4%;
    }
    @media (max-width: 400px) {
        .footer-column-quarter {
            width: 100%;
            margin-left: 0px;
        }
    }
}

/* Generic */
a {
    color: inherit;
    text-decoration: inherit;
}
img {
    border: none;
}
address {
    font-style: normal;
    margin-bottom: 15px;
    margin-bottom: 1.5rem;
}
.iframe-container-square {
    position: relative;
    padding-bottom: 100%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}
.iframe-container-square iframe {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    border: 0px;
}
.box-shadow {
    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.06), 0 4px 10px rgba(0, 0, 0, 0.06);
    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.06), 0 4px 10px rgba(0, 0, 0, 0.06);
    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.06), 0 4px 10px rgba(0, 0, 0, 0.06);
    margin-bottom: 20px;
}
.banner-text {
    font-weight: lighter;
    font-size: 110%;
    text-align: center;
    margin: 0px auto;
    max-width: 600px;
}
.box-padding {
    padding: 10px;
}

/* Images */
.post-image {
    position: relative;
    width: 100%;
}
.post-image img {
    width: 100%;
    height: auto;
}
.post-image > h1 {
    font-size: 17px;
    font-size: 1.75rem;
    margin-bottom: 0px;
}

@media (min-width: 640px) {
    .post-image-text {
        position: absolute;
        width: 100%;
        left: 0px;
        bottom: 0px;
        color: #333;
        background-color: #ffffff;
        opacity: 0.6;
        filter: alpha(opacity=60);
        box-sizing: border-box;
        margin-bottom: 15px;
        margin-bottom: 1.5rem;
    }
    .post-image-text h1 {
        padding: 10px 20px;
        padding: 1rem 2rem;
        margin-bottom: 0px;
    }
}

/* Header */
header {
    width: 100%;
    padding: 20px 0px;
}
#header-nav {
    display: inline-block;
}
#logo {
    display: inline-block;
    width: 300px;
    height: 85px;
    margin-right: 30px;
    background-image: url(../images/emmanuelbristol-logo.png);
    background-image: linear-gradient(transparent, transparent), url(../images/emmanuelbristol-logo.svg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 300px 85px;
    vertical-align: bottom;
}
#header-nav ul {
    display: inline-block;
    list-style: none;
    vertical-align: bottom;
    margin-bottom: 0px;
}
#header-nav ul li {
    font-size: 90%;
    display: inline-block;
    vertical-align: text-top;
    text-align: center;
    margin: 20px 15px 0px 10px;
    line-height: 1.2;
}
#header-nav h1 {
    font-size: 140%;
    margin-bottom: 5px;
    margin-bottom: 0.5rem;
    text-transform: uppercase;
}

/* Footer */
footer {
    width: 100%;
    font-size: 90%;
    padding: 20px 0px;
}
footer h1 {
    font-size: 120%;
    margin-bottom: 10px;
    margin-bottom: 1rem;
    text-transform: uppercase;
}
footer ul {
    list-style: none;
}
footer li {
    padding-bottom: 8px;
    border-width: 0px 0px 1px 0px;
    margin-bottom: 8px;
}
footer li:last-child {
    border-bottom-width: 0px;
    padding-bottom: 0px;
}
#CofElogo {
    margin: 20px 0px;
    display: inline-block;
    width: 100%;
    max-width: 150px;
    height: 35px;
    background-image: url(../images/churchofengland-logo.png);
    background-image: linear-gradient(transparent, transparent), url(../images/churchofengland-logo.svg);
    background-position: top;
    background-repeat: no-repeat;
    background-size: contain;
}

/* Main content */
.main {
    padding-top: 20px;
}

/* Calendar */
h1.calendar {
    font-size: 3rem;
}
ul.calendar {
    list-style: none;
}
ul.calendar li {
    text-indent: -25px;
    padding-left: 25px;
}
.calendar-date {
    text-transform: none;
}

